CSV importer fixes

--- a/anual/src/main/resources/templates/dash/homeADMIN.html
+++ b/anual/src/main/resources/templates/dash/homeADMIN.html
@@ -64,7 +64,7 @@
                             <h4>Reports</h4>
                             <p>A history list of all the reports. This list is updated every ${reportsFrequency.frequency} ${reportsFrequency.unit}.</p>
                         </div>
-                        <div>
+                        <div class="d-flex flex-row align-items-center" style="gap: 30px">
                             <button type="button" class="btn btn-primary" id="create-report-btn">Update reports</button>
                             <button
                                 type="button"
@@ -107,7 +107,7 @@
                                 <h4>Import data</h4>
                                 <p>Upload a CSV file to import data</p>
                             </div>
-                            <form action="/admin/importData" method="post" enctype="multipart/form-data">
+                            <form action="/admin/importData" method="post" enctype="multipart/form-data" id="CSVform">
                                 <div class="my-card d-flex flex-column" style="gap: 30px">
                                     <div class="form-group">
                                         <label for="file">Select a file</label>
@@ -121,7 +121,10 @@
                                         />
                                     </div>
                                     <div class="d-flex flex-row justify-content-end">
-                                        <button type="submit" class="btn btn-primary">Submit</button>
+                                        <button class="btn btn-primary" type="button" id="submit-button">
+                                            <span class="spinner-border spinner-border-sm d-none" id="loading-spinner" aria-hidden="true"></span>
+                                            <span id="button-text">Submit</span>
+                                        </button>
                                     </div>
                                 </div>
                             </form>
