Hotfix: Delete deprecated reports

--- a/anual/src/main/resources/templates/register/signupLE.html
+++ b/anual/src/main/resources/templates/register/signupLE.html
@@ -28,7 +28,7 @@
                     name="mail"
                     required
                     placeholder="Organization email..."
-                    class="col-12 inputs"
+                    class="inputs"
                 />
                 <input
                     type="text"
