feat: show actual stats in landing (#39)

--- a/anual/src/main/resources/templates/landing.html
+++ b/anual/src/main/resources/templates/landing.html
@@ -27,7 +27,7 @@
                             <div class="d-flex align-items-center justify-content-between" style="gap: 10px">
                                 <a href="/api/contributors" class="nav-link">Recommended contributors</a>
                                 <a href="/docs/" class="nav-link">Documentation</a>
-                                <a href="#contact" class="nav-link">Concat us</a>
+                                <a href="#contact" class="nav-link">Contact us</a>
                             </div>
                         </div>
                     </nav>
@@ -78,21 +78,21 @@
                     <div class="d-flex align-items-center" style="gap: 40px">
                         <h1 class="font-100">🥘</h1>
                         <div class="d-flex flex-column align-items-center justify-content-center">
-                            <h1 class="font-128 text-contrast-100">256</h1>
+                            <h1 class="font-128 text-contrast-100">${meals_donated}</h1>
                             <h5 class="text-contrast-200">Meals donated</h5>
                         </div>
                     </div>
                     <div class="d-flex align-items-center" style="gap: 40px">
                         <h1 class="font-100">🧊</h1>
                         <div class="d-flex flex-column align-items-center justify-content-center">
-                            <h1 class="font-128 text-contrast-100">34</h1>
+                            <h1 class="font-128 text-contrast-100">${num_fridges}</h1>
                             <h5 class="text-contrast-200">Fridges all over Buenos Aires</h5>
                         </div>
                     </div>
                     <div class="d-flex align-items-center" style="gap: 40px">
                         <h1 class="font-100">👨</h1>
                         <div class="d-flex flex-column align-items-center justify-content-center">
-                            <h1 class="font-128 text-contrast-100">520</h1>
+                            <h1 class="font-128 text-contrast-100">${num_contributors}</h1>
                             <h5 class="text-contrast-200">Collaborators</h5>
                         </div>
                     </div>
@@ -101,7 +101,7 @@
             <div class="section-space" style="margin-top: 0px"></div>
             <div class="d-flex justify-content-center w-100" style="flex-wrap: wrap">
                 <section>
-                    <h1 class="font-100 accent-100">
+                    <h1 class="font-100 white">
                         Support the <span class="accent-100">Community</span>
                     </h1>
                     <div class="header-line" style="width: auto;"></div>
@@ -131,8 +131,8 @@
                         style="padding: 40px; margin-bottom: 20px"
                         id="about-us"
                     >
-                        <h1 class="font-128" style="margin-bottom: 20px; padding: 20px;">
-                            <span class="accent-100">Who we are and what we do</span>
+                        <h1 class="font-128 white" style="margin-bottom: 20px; padding: 20px;">
+                            Who <span class="accent-100">we</span> are and what we <span class="accent-100">do.</span>
                         </h1>
                         <div class="header-line" style="width: auto;"></div>
 
